--- a/frontend/src/Component/NewStyle.css
+++ b/frontend/src/Component/NewStyle.css
@@ -48,12 +48,12 @@ ul {
   }
 
   Button{
-    padding: 10px;
+    padding: 14px;
     /* Make the input field width 100% */
     box-sizing: border-box; /* Ensure padding is included in width */
     border-radius: 20px;
-    margin-left: 115px;
-    margin-top: 10px;
+    margin-left: 186px;
+    margin-top: 7px;
   }
 
   /* .image-prebooking{
@@ -68,9 +68,9 @@ ul {
   
   .vertical-line {
     border-left: 10px solid black; /* Adjust color and thickness as needed */
-    height: 400px; /* Set the height of the line */
+    height: 440px; /* Set the height of the line */
     margin-left: 950px;
-    margin-top: -420px;
+    margin-top: -463px;
   }
   .booking{
     display: grid;
@@ -83,10 +83,11 @@ ul {
   .current-availability-side{
     color: #2196F3;
     margin-top: 100px;
-    margin-left: 120px;
+    margin-left: 166px;
   }
   .availability-status{
     margin-top: 100px;
+    margin-left: 8px;
   }
   .availability-status-table-image{
     margin-top: 60px;
@@ -98,4 +99,19 @@ ul {
 
   .available-booked-text{
     margin-top: 100px;
+  }
+  .availability-status-bottom{
+    margin-top: 50px;
+    margin-left: 8px;
+  }
+  .availability-status-top{
+    margin-top: 30px;
+  }
+  .my-reservation-button{
+    margin-top: 40px;
+    margin-bottom: 20px;
+    margin-left: 166px;
+  }
+  .pre-booking-heading{
+    margin-left: 28px;
   }
