--- a/frontend/src/Component/NewStyle.css
+++ b/frontend/src/Component/NewStyle.css
@@ -1,6 +1,4 @@
-
-
-ul {
+.prebooking-bar ul {
     list-style-type: none;
     width: 800px;
     height: 60px;
@@ -11,11 +9,11 @@ ul {
     border-radius: 30px;
   }
   
-  li {
+  .prebooking-bar li {
     float: left;
   }
   
-  li a:hover {
+  .prebooking-bar li a:hover {
     background-color: #111;
   }
 
@@ -25,7 +23,7 @@ ul {
     justify-content: center;
   } */
 
-  li.PreDate{
+  .prebooking-bar li.PreDate{
     padding: 18px;
     padding-left: 50px;
   }
@@ -40,14 +38,14 @@ ul {
     text-align: center; /* Center the input field */
   }
   
-  input {
+  .prebooking-bar input {
     padding: 10px;
     width: 100%; /* Make the input field width 100% */
     box-sizing: border-box; /* Ensure padding is included in width */
     border-radius: 20px;
   }
 
-  Button{
+  .prebooking-bar Button{
     padding: 14px;
     /* Make the input field width 100% */
     box-sizing: border-box; /* Ensure padding is included in width */
