rider function almost done2

--- a/frontend/src/Component/NewStyle.css
+++ b/frontend/src/Component/NewStyle.css
@@ -1,5 +1,4 @@
-
-
+/* 
 ul {
     list-style-type: none;
     width: 800px;
@@ -17,7 +16,7 @@ ul {
   
   li a:hover {
     background-color: #111;
-  }
+  } */
 
   /* .PreDate{
     padding-left: 100px;
