--- a/frontend/src/pages/Login.module.css
+++ b/frontend/src/pages/Login.module.css
@@ -104,7 +104,7 @@ input.error {
 }
 
 /* navbar */
-nav {
+/* nav {
   display: flex;
   align-items: center;
 }
@@ -121,7 +121,7 @@ nav button {
   cursor: pointer;
   font-size: 1em;
   margin-left: 10px ;
-}
+} */
 
 /* auth forms */
 form.signup, form.login {
