--- a/frontend/src/pages/addItem/addItem.css
+++ b/frontend/src/pages/addItem/addItem.css
@@ -6,16 +6,16 @@
 
 }
 /* Form part */
-.create{
+/* .create{
     height: 460px;
     border: 1px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #E7E7E7;
-    padding: 60px 0px 60px 50px;
-    margin: 0px -160px 0px 0px;
-    line-height: 40px;
-}
+    background-color: #E7E7E7; */
+    /* padding: 60px 0px 60px 50px; */
+    /* margin: 0px -160px 0px 0px; */
+    /* line-height: 40px; */
+/* } */
 
 .addFood h1 {
     font-size: 45px;
