--- a/frontend/src/pages/addItem/addItem.css
+++ b/frontend/src/pages/addItem/addItem.css
@@ -1,4 +1,4 @@
-.addFood {
+.inventoryAddFood {
     width: 1200px;
     max-width: 800px;
     padding: 0px;
@@ -7,7 +7,7 @@
 }
 /* Form part */
 .create{
-    height: 460px;
+    height: 1000px auto;
     border: 1px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -17,7 +17,7 @@
     line-height: 40px;
 }
 
-.addFood h1 {
+.inventoryAddFood h1 {
     font-size: 45px;
     font-weight:400;
     margin-bottom: 20px;
@@ -26,21 +26,21 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.addFood hr {
+.inventoryAddFood hr {
     border: none;
     height: 2px;
     background-color: #ccc;
     margin: -10px -157px 0px 0px ;
 }
 
-.addFood h4 {
+.inventoryAddFood h4 {
     font-size: 20px;
     color: #000000;
     font-weight: 400;
     margin-top: 15px;
 }
 
-.addFood form label {
+.inventoryAddFood form label {
     font-size: 20px;
     display: block;
     margin-bottom: 5px;
@@ -48,7 +48,7 @@
     font-weight: 500;
 }
 
-.addFood form input {
+.inventoryAddFood form input {
     width: 380px;
     padding: 10px;
     font-size: 16px;
@@ -58,7 +58,7 @@
 }
 
 /* Button */
-.addButton {
+.inventoryAddButton {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color: #1B6E06;
     color: #fff;
@@ -73,16 +73,33 @@
     margin-top: -10px;
 }
 
-.addButton:hover {
+.inventoryAddButton:hover {
     background-color: #6fce74;
     color: black;
 }
 
+/* last error after submit */
 .addError{
     color: red;
     font-size: 16px;
     margin-top: 10px;
 }
+
+/* itemName and itemCategory error */
+.inventoryAddItemError{
+    font-weight: 400;
+    font-size: 18px;
+    font-family: 'Times New Roman', Times, serif;
+    color: rgb(0, 0, 0);
+    background-color: rgb(226, 121, 112);
+    padding: 0px 0px 0px 18px;
+    border-radius: 5px;
+    margin-top: -17px;
+    margin-bottom: 10px;
+    
+}
+
+
 
 /* last two inputs */
 .inputTwo{
