--- a/frontend/src/Component/DorderDetails/dorderDetails.module.css
+++ b/frontend/src/Component/DorderDetails/dorderDetails.module.css
@@ -1,3 +1,6 @@
+/* google font */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
+
 .dineindetails  {
     background: #fff;
     border-radius: 4px;
@@ -10,14 +13,16 @@
   .dineindetails h4{
     margin: 0 0 10px 0;
     font-size: 1.2em;
-    color: var(--primary);
+    color: rgb(245, 94, 39);
   }
   .dineindetails p {
     margin: 0;
     font-size: 0.9em;
     color: #555;
+    padding: 5px;
   }
-  .dineindetails p strong {
+ 
+  .dineindetails span {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -27,3 +32,4 @@
     border-radius: 50%;
     color: #333;
   }
+  
