--- a/frontend/src/Component/restauretNavbar/NavbarStyle.css
+++ b/frontend/src/Component/restauretNavbar/NavbarStyle.css
@@ -1,58 +1,61 @@
-.sidebar {
-    width: 350px; /* Adjust width as needed */
+.inv-sidebar {
+    width: 280px; /* Adjust width as needed */
     height: 100vh; /* Make sidebar full height of the viewport */
     background-color: #D7D7D7; /* Background color for the sidebar */
     color: white; /* Text color */
     display: flex; /* Use flexbox */
     flex-direction: column; /* Arrange items vertically */
+    position: fixed;
+    left: 0;
+    top: 0;
+
 }
 
-.sidebar p{
+.inv-sidebar p{
     color: black;
 }
 /* Logo */
-.sidebar p img{
-    width: 60px;
-    height: 60px;
+.inv-sidebar p img{
+    width: 50px;
+    height: 50px;
     border-radius: 40px;
     margin: 15px 0px 0px 30px;
 }
 
 /* Topic */
-.sidebar p h1{
+.inv-sidebar p h1{
     font-weight:250;
-    font-size: 35px;
+    font-size: 25px;
     margin-left: 115px;
     margin-top: -55px;
 
 }
 
 
-.sidebar ul {
+.inv-sidebar ul {
     list-style-type: none;
     padding: 0;
     margin: 25px 0px 0px 15px;
     
 }
 
-.sidebar ul li {
-    padding: 10px;
+.inv-sidebar ul li {
+    padding: 5px;
     line-height:1.7cm;
     cursor: pointer;
     color: black;
-    font-size: 24px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
+    font-size: 17px;
     font-weight: 600;
 }
 
-.sidebar ul li a{
+.inv-sidebar ul li a{
     text-decoration: none;
     color: inherit;
 }
 
-.sidebar ul li:hover {
+.inv-sidebar ul li:hover {
     background-color: #acacac; /* Change background color on hover */
-    width: 300px;
+    width: 240px;
     border-radius: 20px;
 }
 
@@ -62,23 +65,26 @@ ul li svg {
 }
 
 /* Button */
-.navButton svg {
+.inv-navButton svg {
     margin: 0px 25px 0px 0px;
 }
 
-.navButton{
-    margin-top: 50px;
-    margin-left: 15px;
+.inv-navButton{
+    margin-left: 0px;
     background-color: #8B0000;
     border-radius: 10px;
     color: white;
-    padding: 10px 80px 10px 30px;
-    font-size: 24px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 10px 58px 10px 30px;
+    font-size: 23px;
     font-weight: 600;
 }
 
-.navButton a {
+.inv-navButton a {
     text-decoration: none;
     color: inherit;
 }
+
+
+
+
+
