--- a/frontend/src/pages/DineIn/dinein.module.css
+++ b/frontend/src/pages/DineIn/dinein.module.css
@@ -33,3 +33,14 @@ body {
     padding: 20px;
     
   }
+
+  .home button{
+    width: 25% ;
+    align-items: center;
+    padding: 10px;
+    background-color:rgb(245, 94, 39);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
