--- a/frontend/src/Component/Updaterestaurants.css
+++ b/frontend/src/Component/Updaterestaurants.css
@@ -1,28 +1,55 @@
-/* updaterestaurants.css */
+/* Container for the entire page */
+.upd-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Set the container height to full viewport height */
+  background-color: #f2f2f2; /* Background color */
+}
 
-.form-container {
-    max-width: 400px;
-    margin: 0 auto;
-  }
-  
-  .form-container label {
-    display: block;
-    margin-bottom: 10px;
-  }
-  
-  .form-container input[type="radio"] {
-    margin-right: 5px;
-  }
-  
-  .form-container button {
-    background-color: #008cba;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-  }
-  
-  .form-container button:hover {
-    background-color: #005f73;
-  }
-  
+/* Container for the form */
+.updaterestaurants-container {
+  width: 600px; /* Set the width of the form */
+  padding: 40px; /* Add some padding */
+  background-color: #fff; /* Form background color */
+  border-radius: 8px; /* Rounded corners */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add shadow */
+  margin-top: -110px;
+}
+
+/* Form labels */
+.updaterestaurants-container label {
+  display: block; /* Display labels as block elements */
+  margin-bottom: 10px; /* Add some space below labels */
+}
+
+/* Radio button options */
+.updaterestaurants-container input[type="radio"] {
+  margin-right: 10px; /* Add some space between radio buttons */
+}
+
+/* Submit button */
+.updaterestaurants-container button {
+  display: block; /* Display button as block element */
+  width: 50%; /* Make button full width */
+  padding: 10px; /* Add padding */
+  margin-top: 20px; /* Add some space on top */
+  margin-left: 120px;
+  background-color: #105c22; /* Button background color */
+  color: #fff; /* Text color */
+  border: none; /* Remove border */
+  border-radius: 4px; /* Rounded corners */
+  cursor: pointer; /* Add cursor pointer */
+}
+
+/* Submit button hover effect */
+.updaterestaurants-container button:hover {
+  background-color: #0056b3; /* Darker background color on hover */
+}
+
+/* Admin component styles */
+.admin-container {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
