--- a/frontend/src/pages/restaurant.css
+++ b/frontend/src/pages/restaurant.css
@@ -1,7 +1,21 @@
+.res h1 {
+    text-align: center;
+    font-size: 38px;
+    color: #333;
+    margin-bottom: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    border-bottom: 2px solid #ccc;
+    padding-bottom: 10px;
+}
+
+
 /* Table style */
 .restaurant table {
-    width: 75%; /* Adjusted width */
-    margin-top: 100px; /* Added margin to push the table down */
+    width: 80%; /* Adjusted width */
+    margin-top: 65px; /* Added margin to push the table down */
     margin-left: 275px; /* Moved the table to the right */
     border-collapse: collapse;
 }
@@ -30,69 +44,49 @@ tbody {
     background-color: #d7f3f2;
 }
 
+/* Button container style */
+.button-container {
+    display: flex; /* Use flexbox to align buttons */
+    justify-content: center; /* Center align buttons */
+    align-items: center; /* Align items vertically */
+}
+
+/* Button style */
 /* Button style */
 .delete-button {
-    background-color: #8e1010;
+    background-color: #8e1010; /* Red color for delete button */
     color: white;
     border: none;
     padding: 6px 8px; /* Reduced padding */
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 10px; /* Reduced font size */
     cursor: pointer;
     transition: background-color 0.3s;
-    margin-right: 4px; /* Reduced margin */
+    margin: 4px; /* Add margin to buttons */
     border-radius: 5px; /* Reduced border radius */
     font-weight: 1000;
 }
 
-/* Button hover style */
-.delete-button:hover {
-    background-color: #ffa9a9;
-    color: black;
-    cursor: pointer;
-}
-
 .update-button {
-    background-color: #105c22;
+    background-color: #105c22; /* Green color for update button */
     color: white;
     border: none;
     padding: 6px 8px; /* Reduced padding */
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 10px; /* Reduced font size */
     cursor: pointer;
     border-radius: 5px; /* Reduced border radius */
     transition: background-color 0.3s;
+    margin: 4px; /* Add margin to buttons */
 }
 
+
+/* Button hover style */
+.delete-button:hover,
 .update-button:hover {
-    background-color: #54c66c;
+    background-color: #ffa9a9;
+    color: black;
     cursor: pointer;
-}
-
-/* Style for Topic and h4 */
-.home h1 {
-    font-size: 30px; /* Reduced font size */
-    font-weight: 400;
-    margin-bottom: 20px;
-    letter-spacing: 1px;
-    word-spacing: 1px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-.home hr {
-    border: none;
-    height: 2px;
-    background-color: #ccc;
-    margin: -10px -157px 0px 0px;
-}
-
-.home h4 {
-    font-size: 14px; /* Reduced font size */
-    color: #000000;
-    font-weight: 400;
-    margin-top: 15px;
 }
